# dotfiles

./: .tmux.conf  .zshrc  hyprland.conf  install.sh  restart_waybar.sh  touchegg.conf  waybar.sh
hypr/: README.md  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  low_battery.sh  restart-portals.sh  ss-record.sh  unset_workspaces.sh
hypr/hypr-monitors/: Cargo.toml  restart.sh
hypr/hypr-monitors/src/: main.rs
kanshi/: auto_reload.sh  config
kitty/: kitty.conf
lvim/: config.lua
nvim/: init.lua  init.vim  lazy-lock.json
nvim-vimscript/: init.vim
nvim-vimscript/plugins/: autopairs.vim
nvim/plugin/: lsp.vim  telescope.vim  vimspector.vim
nvim/plugins/: dap.vim  dracula.vim  gitsigns.vim  lsp.lua  lsp.vim  lualine.vim  markdown-composer.vim  nullls.vim  nvim-lint.vim  onedark.vim  telescope.vim  tmux.nvim.vim  treesitter.vim
nvim/queries/harmony/: highlights.scm
rofi/launchers/type-7/: bookmarks.sh  filebrowser.sh  launcher.sh  rofimoji.sh  style-5.rasi
rofi/powermenu/type-1/: powermenu.sh
swayidle/: restart.sh
swaylock/: config
waybar/: config.jsonc  style.css
waybar-inspo/: config.jsonc
waybar-inspo/scripts/: checkgmail.py
waybar/scripts/: count_todos.sh
