[package]
name = "hypr-monitors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
hyprland = { vesrion = "0.4.0-alpha2" }
notify = "6.1.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
